Client Feedback : Mobile Menu doesn't Collapse [fix]

--- a/bench_2-0/client/_assets/scss/mobile.scss
+++ b/bench_2-0/client/_assets/scss/mobile.scss
@@ -83,6 +83,13 @@ a[data-rel=hamburger] {
     a[data-rel=hamburger] {
         display: block;
     }
+    #nav-mobileNavHolder .nav-menuDropDown {
+        top: -1000px;
+
+        &.active {
+            top: 65px;
+        }
+    }
     html,
     body,
     header,
